syntax="proto3";

package pb;

option go_package="github.com/longln/simplebank/pb";

import "user.proto";
import "google/protobuf/timestamp.proto";

message LoginUserRequest {
    string userName = 1;
    string fullName = 2;
}

message LoginUserResponse {
    User user = 1;
    string session_id = 2;
    string access_token = 3;
    string refresh_token = 4;
    google.protobuf.Timestamp access_token_expires_at = 5;
    google.protobuf.Timestamp refresh_token_expires_at = 6;

}
